# Cytomine-cbir

./: Dockerfile  pyproject.toml
.github/workflows/: check-quality.yml  test.yml
cbir/: app.py  cbir.py  config.py
cbir/api/: image.py  images.py  index.py  storages.py
cbir/api/utils/: utils.py
cbir/models/: model.py
cbir/retrieval/: database.py  indexer.py  retrieval.py  store.py  utils.py
tests/: conftest.py  test_retrieval.py  test_storage.py
